[tool.poetry]
name = "python-test-lib"
version = "0.1.0"
description = "Test library for understanding custom libraries and modules"
authors = ["mwilczek.net"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
